# kalman_filter

./: CMakeCache.txt  CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  MYREADME.md  Makefile  README.md  cmake_install.cmake  kalman.cbp  sail_prediction.cpp
Kalman.dSYM/Contents/Resources/DWARF/: Kalman
MATLAB/: get_cov.m  get_sailboat_ex.m  get_sigma_sq.m  get_state_cov_matrix.m  matlab.mat  predict_over_time.m  prediction.m  varaibles.mat
